--- a/wiki/OpenEVSEv4partslist.wiki
+++ b/wiki/OpenEVSEv4partslist.wiki
@@ -75,7 +75,7 @@ Prices subject to change and do not include taxes or shipping.
 
     * *V4.0* - Added header for spare/unused I/O pins and for charging LED, additional +/- 12 vdc isolated power supply filtering, Added decoupling capacitors for all IC's, changed from op-amp to high speed digital switch for pilot signal.<br>Power monitor circuitry added, Voltage sensing and Current transformer inputs. (software modification required).
 
-    * *v3.0* - Added onboard L1/L2 sense, removed second relay, changed linear 5Vdc regulator to a high efficiency switching regulator.
+    * *v3.0* - Added onboard L1/L2 sense, changed linear 5Vdc regulator to a high efficiency switching regulator.
 
     * *v2.0* - Added connections for logic level L1/L2 voltage sense board inputs and power. *Changed* DC-DC converter to _Murata NKA1212SC_ with 12Vdc input. Added option for second relay. Added a header for connecting to an Adafruit color LCD shield.
 
