--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -5,7 +5,7 @@
     * [OpenEVSE_Compatibility Compatibility]
   * *EVSE Charging Stations*
     * [Open_EVSEs EVSE Example Pictures]
-    * [EVSE_by_mwolrich EVSE by mwolrich]
+    * [EVSE_by_mwolrich 30A portable EVSE by mwolrich]
     * [EVSE_by_thinwing EVSE by thinwing]
     * [EVSE_EV_ChargeAmerica_Upgrade Rebuild of broken EVCA EVSE]
     * [EVSE_Example75A 75A EVSE by chris1howell]
