Edited wiki page 75AOpenEVSE through web user interface.

--- a/wiki/75AOpenEVSE.wiki
+++ b/wiki/75AOpenEVSE.wiki
@@ -18,6 +18,9 @@ NOTE: The Open EVSE control Board must be grounded to the EV/Earth Ground for th
 
 Note: for full 75A Operation, wire this with #3 AWG Copper wire for the (2) hots (I used Red and Black), and a #6 THHN for Ground (I used Green) to a 100A circuit breaker, a good low cost source for #3 THHN is "StayOnline", see this link:
 http://www.stayonline.com/600-volt-thhn.aspx
+
+Tee pictures below show the unit using a 14-50 plug on a 10/3 SOOW cable, this was temporary as I tested and debugged the EVSE, I will update the pictures one I have it hard wired to the 100A breaker/wiring.
+
  
 = Parts =
 
