--- a/wiki/75AOpenEVSE.wiki
+++ b/wiki/75AOpenEVSE.wiki
@@ -21,7 +21,7 @@ http://www.stayonline.com/600-volt-thhn.aspx
 
 The pictures below show the unit using a 14-50 plug on a 10/3 SOOW cable, this was temporary as I tested and debugged the EVSE, I will update the pictures one I have it hard wired to the 100A breaker/wiring.
 
-Also show in the OpenEVSE Arduuino shield & Ardunio, it has since been replaced with the OpenEVSE V4 surface mount PCB, as it has much better noise immunity, I ahve also replaced the wiring between the OpenEVSE and the AdaFruit LCD display with shielded cable, the ground wire has been upsized (from #22 to #16) from teh ground buss to the OpenEVSE module, I have installed ferrit cores and an MOV as well.  All of this was needed to get the EVSE reliable, it will be shown on the updated pictures.
+Also shown in the OpenEVSE Arduino shield & Ardunio, it has since been replaced with the OpenEVSE V4 surface mount PCB, as it has much better noise immunity, I have also replaced the wiring between the OpenEVSE and the AdaFruit LCD display with shielded cable, the ground wire has been upsized (from #22 to #16) from the ground buss to the OpenEVSE module, I have installed (4) ferrite cores and an MOV as well.  All of this was needed to get the EVSE reliable, it will be shown on the updated pictures.
 
  
 = Parts =
