--- a/wiki/OpenEVSEv4partslist.wiki
+++ b/wiki/OpenEVSEv4partslist.wiki
@@ -57,11 +57,10 @@ If you'd like to built your own EVSE controller board instead of ordering one, h
 || *External components* || 
 || Crmagnetics || CR8420-1000-G || CT || 1000|| CT1|| 1|| $10.65|| http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 || 
 || TE Connectivity|| T92S7D22-12|| Relay|| DPST 30amp|| Rly1|| 1|| $13.87|| http://www.digikey.com/product-detail/en/T92S7D22-12 ||
-|| ALTERNATIVE 12V 30A DPDT relay below (Jameco) ||
-|| P&B/Tyco || T92P7D22-12 || Relay || DPST 30amp || Rly1 || 1 || $8.95 ||  https://www.jameco.com/webapp/wcs/stores/servlet/Product_10001_10001_2158346_-1 ||
 || CUI Inc|| FSC-S5-12U|| Power supply|| 5W 12V|| DC2|| 1|| $27.32|| http://www.digikey.com/product-detail/en/FSC-S5-12U/102-1573-ND/1699037 || 
-|| ALTERNATIVE 12V Power Supply below (Jameco) ||
+|| ALTERNATIVE 12V Power Supply  & ALTERNATIVE 12V 30A DPST relay below (Jameco) ||
 || MeanWell || RS-15-12 || Power Supply || 15.6W 12V || DC2 || 1 || $11.95 || http://www.jameco.com/webapp/wcs/stores/servlet/Product_10001_10001_1919051_-1?CID=GOAW&gclid=CKPiy5PqprMCFQyk4Aod5EkARQ ||
+|| P&B/Tyco || T92P7D22-12 || Relay || DPST 30amp || Rly1 || 1 || $8.95 ||  https://www.jameco.com/webapp/wcs/stores/servlet/Product_10001_10001_2158346_-1 ||
 || Laird|| 28B1250-000|| Ferrite core|| 31x19x22mm|| L4,L5|| 2|| $2.98|| http://www.digikey.com/product-detail/en/28B1250-000 || 
 || Littelfuse Inc.|| 03540902ZXGY|| Fuse holder|| 20amp 300V|| FH|| 1|| $3.89|| http://www.digikey.com/product-detail/en/03540902ZXGY || 
 || Littelfuse Inc.|| 0314020.MXP|| Fuse|| 3AG 20amp F|| F3,F4|| 2|| $1.38|| http://www.digikey.com/product-detail/en/0314020.MXP || 
