--- a/wiki/PCBProduction.wiki
+++ b/wiki/PCBProduction.wiki
@@ -7,5 +7,7 @@ If you'd like to built your own EVSE controller board instead of ordering one, h
 
 || Name || Turn around || Made in || Setup Fee || Cost || Shipping || URL ||
 || BatchPCB || 3 - 4 weeks || China || $10 || $2.50sq/in || varies || http://www.batchpcb.com ||
-|| OSH Park || 2 weeks || USA || $0 || $5.00sq/in for 3 boards || $0 || http://oshpark.com/ ||
+|| GoldPheonix || 5 - 10 buisness days || China || Free || $120 for 155sq/in || Free || http://www.goldphoenixpcb.com/ ||
+|| PCBExpress || 2 days ||  USA || $0 || 4 boards up to 9sq/in each $278 || Free || http://www.pcbexpress.com/ ||
+|| OSH Park || 2 weeks || USA || $0 || $5.00sq/in for 3 boards || Free || http://oshpark.com/ ||
 || PCB Train || 1 - 10 days || UK || varies || varies || varies || http://www.pcbtrain.co.uk/ ||
