--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -11,7 +11,7 @@
 || J-1772 with 3m Cable - 30A || EV Power || $161.80 || $23 || 1 || http://ev-power.com.au/webstore/index.php/sae-charging-plugs-sockets/ev-charging-plug-sae-j1772.html ||
 || CR8420-1000-G Current Transformer || Amazon || $10.67 || $6.12 || 1 || http://www.amazon.com/gp/product/B005CWO4X0/ref=ox_ya_os_product ||
 ||  || || || ||  ||  ||
-|| *TOTAL* || || *$326.73*|| *$94.67* ||  || ||
+|| *TOTAL* || || *$326.73*|| *$94.67* ||  || *TOTAL $421.40* ||
 
 
 = Introduction =
