Edited wiki page EVSE_LORDSn1per through web user interface.

--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -23,6 +23,9 @@ I plan that my EVSE will be of high commercial standards,offering good weather p
 
 This is still a work in progress so come back often for updates
 
+= Photos =
+
+
 = Videos =
 
 First boot up of arduino UNO
