Edited wiki page EVSE_LORDSn1per through web user interface.

--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -26,12 +26,12 @@ This is still a work in progress so come back often for updates
 = Photos =
 Starting to build the RGB LCD from Adafruit
 
-<a href="http://www.flickr.com/photos/89462431@N06/8140995544/" title="IMG_2127.JPG by Phillip Carlson, on Flickr"><img src="http://farm9.staticflickr.com/8186/8140995544_d8bb15ca27.jpg" width="500" height="375" alt="IMG_2127.JPG"></a>
+<a href="http://www.flickr.com/photos/89462431@N06/8140995544/" title="IMG_2127.JPG by Phillip Carlson, on Flickr"><img src="http://farm9.staticflickr.com/8186/8140995544_d8bb15ca27.jpg" width="500" height="375" alt="IMG_2127.JPG">
 
 
 Finished the LCD
 
-<a href="http://www.flickr.com/photos/89462431@N06/8140962969/" title="IMG_2131.JPG by Phillip Carlson, on Flickr"><img src="http://farm9.staticflickr.com/8049/8140962969_f8fce06df9.jpg" width="500" height="375" alt="IMG_2131.JPG"></a>
+<a href="http://www.flickr.com/photos/89462431@N06/8140962969/" title="IMG_2131.JPG by Phillip Carlson, on Flickr"><img src="http://farm9.staticflickr.com/8049/8140962969_f8fce06df9.jpg" width="500" height="375" alt="IMG_2131.JPG">
 
 
 = Videos =
