--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -26,7 +26,7 @@ This is still a work in progress so come back often for updates
 = Photos =
 Starting to build the RGB LCD from Adafruit
 
-<http://flic.kr/p/dpoJm9>
+[img]http://farm9.staticflickr.com/8186/8140995544_d8bb15ca27.jpg[/img][/url]
 
 
 = Videos =
