Edited wiki page J1772CableSources through web user interface.

--- a/wiki/J1772CableSources.wiki
+++ b/wiki/J1772CableSources.wiki
@@ -18,3 +18,4 @@
 || || Plug alone || Dostar || L1/L2 || 70A || No || none || $170 || http://www.tucsonev.com/index.html ||
 || || Plug with Cord || Dostar || L1/L2 || 45A || No || 20' || $230 || http://www.tucsonev.com/index.html ||
 || || Plug with Cord || Dostar || L1/L2 || 70A || No || 26' || $250 || http://www.tucsonev.com/index.html ||
+|| || J-1772 with 3m cord || EV Power || L1/L2 || 32A ||  || 3m || $145 || http://ev-power.com.au/webstore/index.php/sae-charging-plugs-sockets/ev-charging-plug-sae-j1772.html ||
