--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -45,6 +45,9 @@ http://farm9.staticflickr.com/8331/8140963675_ecd22726b7_c.jpg
 v1.0.3 now displays cost instead of KW. 
 http://farm9.staticflickr.com/8336/8146088094_17ca9c94f7_c.jpg
 
+Finished building the Open EVSE Arduino Shield. Note I have put R1 in R20. That will be removed and R1 and R20 have now been replaced with blue metal film 1Kohm 1% resistors.
+http://farm9.staticflickr.com/8060/8165693419_fbb68782f9_c.jpg
+
 = Videos =
 
 First boot up of arduino UNO
