--- a/wiki/EVSE_LORDSn1per.wiki
+++ b/wiki/EVSE_LORDSn1per.wiki
@@ -10,8 +10,10 @@
 || RGB LCD Shield 16x2 Positive Display || Adafruit || $23.95 || $45.55 || 1 || http://adafruit.com/products/716 ||
 || J-1772 with 3m Cable - 30A || EV Power || $161.80 || $23 || 1 || http://ev-power.com.au/webstore/index.php/sae-charging-plugs-sockets/ev-charging-plug-sae-j1772.html ||
 || CR8420-1000-G Current Transformer || Amazon || $10.67 || $6.12 || 1 || http://www.amazon.com/gp/product/B005CWO4X0/ref=ox_ya_os_product ||
+|| 12v DC 400mA power supply || Jaycar || $15.95 || $0 || 1 || http://www.jaycar.com.au/productView.asp?ID=MP3147 ||
+|| Chrome push button with Green LED circle || Jaycar || $10.95 || $0 || 1 || http://www.jaycar.com.au/productView.asp?ID=SP0797 ||
 ||  || || || ||  ||  ||
-|| *TOTAL* || || *$326.73*|| *$94.67* ||  || *TOTAL $421.40* ||
+|| *TOTAL* || || *$353.63*|| *$94.67* ||  || *TOTAL $448.30* ||
 
 
 = Introduction =
