--- a/wiki/OpenEVSE_Workshop.wiki
+++ b/wiki/OpenEVSE_Workshop.wiki
@@ -1,13 +1,22 @@
-#summary One-sentence summary of this page.
+#summary OpenEVSE Workshop Saturday December 1, 2012.
 
 = Introduction =
 
-Add your content here.
+OpenEVSE Workshop Saturday December 1, 2012.
+Immediately following the Socal LEAF gathering.
+
+Space Limited to 8 builders. Helpers, guests and visitors welcome.
+
+= Location =
+Exact location TBD. Near Cerritos, Ca.
+
+= Mini presentations ==
+Topic: Basic Arduino programming
+
+Topic: Loading new OpenEVSE firmware
 
 
-= Details =
-
-= Parts =
+= Option 1 - 30A portable EVSE - All parts supplied =
 
 || Part || Source || Cost || Quantity || Link ||
 || Open EVSE Plus Board || Open EVSE || $135 ($15 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
@@ -19,6 +28,25 @@ Add your content here.
 || FUSEHOLDER 1/4" 30A 250V PNL MNT (283-2850-ND) || Digikey || $4.00 || 2 || http://search.digikey.com/us/en/products/BK%2FHKP-R/283-2850-ND/1024094 ||
 || FUSE 250V SLO-BLO 3AB 30A (F1779-ND) || Digikey || $1.50 || 2|| http://search.digikey.com/us/en/products/0326030.MXP/F1779-ND/778640 ||
 || 30A AC Plug L6-30 || Stay Online || $33.00 || 1 || http://www.stayonline.com/detail.aspx?ID=15695 ||
+|| AdaFruit RGB LCD Shield kit || AdaFruit || $24.95 || 1 || http://adafruit.com/products/714 ||
+|| Strain Relief || Polycase || $7.00 || 2 || http://www.polycase.com/cg-17 ||
+|| Ground Bar Kit || Home Improvement store || $5.00 || 1 || http://www.homedepot.com/h_d1/N-5yc1v/R-100207842/h_d2/ProductDisplay?catalogId=10053&langId=-1&keyword=Ground+Bar+Kit ||
+|| Connectors || Anderson Power Products || $8.00 || 1 || http://www.polycase.com/cg-17 ||
+|| Reserve for shipping and tax || Misc || $20.00 || 1 || ||
+
+|| *Total* || *$435* ||
+
+= Option 2 - Build to your spec - Generic parts supplied =
+
+|| Part || Source || Cost || Quantity || Link ||
+|| Open EVSE Plus Board || Open EVSE || $135 ($15 discount) || 1 || http://code.google.com/p/open-evse/wiki/Ordering ||
+|| J-1772 cable || Builder Supplied ||  || 1 ||  ||
+|| Relay/Contactor || Builder Supplied || || 1 || ||
+|| Current Transformer || Digikey || $10.65 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
+|| Enclosure || Builder Supplied || || 1 ||  ||
+|| FUSEHOLDER if not hardwired || ||  || 2 || ||
+|| FUSE 250V if not hardwired || ||  || 2 || ||
+|| AC plug if not hardwired || || || 1 || ||
 || AdaFruit RGB LCD Shield kit || AdaFruit || $24.95 || 1 || http://adafruit.com/products/714 ||
 || Strain Relief || Polycase || $7.00 || 2 || http://www.polycase.com/cg-17 ||
 || Ground Bar Kit || Home Improvement store || $5.00 || 1 || http://www.homedepot.com/h_d1/N-5yc1v/R-100207842/h_d2/ProductDisplay?catalogId=10053&langId=-1&keyword=Ground+Bar+Kit ||
